@@ -286,6 +286,22 @@ name|lucene
 operator|.
 name|search
 operator|.
+name|join
+operator|.
+name|ToParentBlockJoinQuery
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
 name|vectorhighlight
 operator|.
 name|FieldTermStack
@@ -887,6 +903,47 @@ block|{
 name|flatten
 argument_list|(
 name|q
+argument_list|,
+name|reader
+argument_list|,
+name|flatQueries
+argument_list|,
+name|boost
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+elseif|else
+if|if
+condition|(
+name|sourceQuery
+operator|instanceof
+name|ToParentBlockJoinQuery
+condition|)
+block|{
+name|Query
+name|childQuery
+init|=
+operator|(
+operator|(
+name|ToParentBlockJoinQuery
+operator|)
+name|sourceQuery
+operator|)
+operator|.
+name|getChildQuery
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|childQuery
+operator|!=
+literal|null
+condition|)
+block|{
+name|flatten
+argument_list|(
+name|childQuery
 argument_list|,
 name|reader
 argument_list|,
