@@ -160,6 +160,20 @@ name|lucene
 operator|.
 name|search
 operator|.
+name|MatchAllDocsQuery
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
 name|PrefixQuery
 import|;
 end_import
@@ -231,6 +245,54 @@ operator|.
 name|search
 operator|.
 name|WildcardQuery
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|join
+operator|.
+name|QueryBitSetProducer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|join
+operator|.
+name|ScoreMode
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|join
+operator|.
+name|ToParentBlockJoinQuery
 import|;
 end_import
 
@@ -7935,6 +7997,108 @@ argument_list|(
 name|boost
 argument_list|,
 literal|"A"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testFlattenToParentBlockJoinQuery
+specifier|public
+name|void
+name|testFlattenToParentBlockJoinQuery
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|initBoost
+argument_list|()
+expr_stmt|;
+name|Query
+name|childQuery
+init|=
+name|tq
+argument_list|(
+name|boost
+argument_list|,
+literal|"a"
+argument_list|)
+decl_stmt|;
+name|Query
+name|query
+init|=
+operator|new
+name|ToParentBlockJoinQuery
+argument_list|(
+name|childQuery
+argument_list|,
+operator|new
+name|QueryBitSetProducer
+argument_list|(
+operator|new
+name|MatchAllDocsQuery
+argument_list|()
+argument_list|)
+argument_list|,
+name|ScoreMode
+operator|.
+name|None
+argument_list|)
+decl_stmt|;
+name|query
+operator|=
+operator|new
+name|BoostQuery
+argument_list|(
+name|query
+argument_list|,
+name|boost
+argument_list|)
+expr_stmt|;
+name|FieldQuery
+name|fq
+init|=
+operator|new
+name|FieldQuery
+argument_list|(
+name|query
+argument_list|,
+literal|true
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|Set
+argument_list|<
+name|Query
+argument_list|>
+name|flatQueries
+init|=
+operator|new
+name|HashSet
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|fq
+operator|.
+name|flatten
+argument_list|(
+name|query
+argument_list|,
+name|reader
+argument_list|,
+name|flatQueries
+argument_list|,
+literal|1f
+argument_list|)
+expr_stmt|;
+name|assertCollectionQueries
+argument_list|(
+name|flatQueries
+argument_list|,
+name|tq
+argument_list|(
+name|boost
+argument_list|,
+literal|"a"
 argument_list|)
 argument_list|)
 expr_stmt|;
