@@ -109,6 +109,9 @@ Improvements
   chain that is about normalization for range/fuzzy/wildcard queries.
   (Adrien Grand)
 
+* LUCENE-7376: Add support for ToParentBlockJoinQuery to fast vector highlighter's
+  FieldQuery. (Martijn van Groningen)
+
 Optimizations
 
 * LUCENE-7330, LUCENE-7339: Speed up conjunction queries. (Adrien Grand)
